---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
F632 [*] Use `==` to compare constant literals
 --> constant_literals.py:4:4
  |
2 | # Errors
3 | ###
4 | if "abc" is "def":  # F632 (fix)
  |    ^^^^^^^^^^^^^^
5 |     pass
6 | if "abc" is None:  # F632 (fix, but leaves behind unfixable E711)
  |
help: Replace `is` with `==`
  |
4 - if "abc" is "def":  # F632 (fix)
4 + if "abc" == "def":  # F632 (fix)
  |

F632 [*] Use `==` to compare constant literals
 --> constant_literals.py:6:4
  |
4 | if "abc" is "def":  # F632 (fix)
5 |     pass
6 | if "abc" is None:  # F632 (fix, but leaves behind unfixable E711)
  |    ^^^^^^^^^^^^^
7 |     pass
8 | if None is "abc":  # F632 (fix, but leaves behind unfixable E711)
  |
help: Replace `is` with `==`
  |
6 - if "abc" is None:  # F632 (fix, but leaves behind unfixable E711)
6 + if "abc" == None:  # F632 (fix, but leaves behind unfixable E711)
  |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:8:4
   |
 6 | if "abc" is None:  # F632 (fix, but leaves behind unfixable E711)
 7 |     pass
 8 | if None is "abc":  # F632 (fix, but leaves behind unfixable E711)
   |    ^^^^^^^^^^^^^
 9 |     pass
10 | if "abc" is False:  # F632 (fix, but leaves behind unfixable E712)
   |
help: Replace `is` with `==`
  |
8 - if None is "abc":  # F632 (fix, but leaves behind unfixable E711)
8 + if None == "abc":  # F632 (fix, but leaves behind unfixable E711)
  |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:10:4
   |
 8 | if None is "abc":  # F632 (fix, but leaves behind unfixable E711)
 9 |     pass
10 | if "abc" is False:  # F632 (fix, but leaves behind unfixable E712)
   |    ^^^^^^^^^^^^^^
11 |     pass
12 | if False is "abc":  # F632 (fix, but leaves behind unfixable E712)
   |
help: Replace `is` with `==`
   |
10 - if "abc" is False:  # F632 (fix, but leaves behind unfixable E712)
10 + if "abc" == False:  # F632 (fix, but leaves behind unfixable E712)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:12:4
   |
10 | if "abc" is False:  # F632 (fix, but leaves behind unfixable E712)
11 |     pass
12 | if False is "abc":  # F632 (fix, but leaves behind unfixable E712)
   |    ^^^^^^^^^^^^^^
13 |     pass
14 | if False == None:  # E711, E712 (fix)
   |
help: Replace `is` with `==`
   |
12 - if False is "abc":  # F632 (fix, but leaves behind unfixable E712)
12 + if False == "abc":  # F632 (fix, but leaves behind unfixable E712)
   |

E712 [*] Avoid equality comparisons to `False`; use `not None:` for false checks
  --> constant_literals.py:14:4
   |
12 | if False is "abc":  # F632 (fix, but leaves behind unfixable E712)
13 |     pass
14 | if False == None:  # E711, E712 (fix)
   |    ^^^^^^^^^^^^^
15 |     pass
16 | if None == False:  # E711, E712 (fix)
   |
help: Replace with `not None`
   |
14 - if False == None:  # E711, E712 (fix)
14 + if not None:  # E711, E712 (fix)
   |
note: This is an unsafe fix and may change runtime behavior

E711 [*] Comparison to `None` should be `cond is None`
  --> constant_literals.py:14:13
   |
12 | if False is "abc":  # F632 (fix, but leaves behind unfixable E712)
13 |     pass
14 | if False == None:  # E711, E712 (fix)
   |             ^^^^
15 |     pass
16 | if None == False:  # E711, E712 (fix)
   |
help: Replace with `cond is None`
   |
14 - if False == None:  # E711, E712 (fix)
14 + if not None:  # E711, E712 (fix)
   |
note: This is an unsafe fix and may change runtime behavior

E711 [*] Comparison to `None` should be `cond is None`
  --> constant_literals.py:16:4
   |
14 | if False == None:  # E711, E712 (fix)
15 |     pass
16 | if None == False:  # E711, E712 (fix)
   |    ^^^^
17 |     pass
   |
help: Replace with `cond is None`
   |
16 - if None == False:  # E711, E712 (fix)
16 + if not None:  # E711, E712 (fix)
   |
note: This is an unsafe fix and may change runtime behavior

E712 [*] Avoid equality comparisons to `False`; use `not None:` for false checks
  --> constant_literals.py:16:4
   |
14 | if False == None:  # E711, E712 (fix)
15 |     pass
16 | if None == False:  # E711, E712 (fix)
   |    ^^^^^^^^^^^^^
17 |     pass
   |
help: Replace with `not None`
   |
16 - if None == False:  # E711, E712 (fix)
16 + if not None:  # E711, E712 (fix)
   |
note: This is an unsafe fix and may change runtime behavior

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:20:4
   |
19 | named_var = []
20 | if [] is []:  # F632 (fix)
   |    ^^^^^^^^
21 |     pass
22 | if named_var is []:  # F632 (fix)
   |
help: Replace `is` with `==`
   |
20 - if [] is []:  # F632 (fix)
20 + if [] == []:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:22:4
   |
20 | if [] is []:  # F632 (fix)
21 |     pass
22 | if named_var is []:  # F632 (fix)
   |    ^^^^^^^^^^^^^^^
23 |     pass
24 | if [] is named_var:  # F632 (fix)
   |
help: Replace `is` with `==`
   |
22 - if named_var is []:  # F632 (fix)
22 + if named_var == []:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:24:4
   |
22 | if named_var is []:  # F632 (fix)
23 |     pass
24 | if [] is named_var:  # F632 (fix)
   |    ^^^^^^^^^^^^^^^
25 |     pass
26 | if named_var is [1]:  # F632 (fix)
   |
help: Replace `is` with `==`
   |
24 - if [] is named_var:  # F632 (fix)
24 + if [] == named_var:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:26:4
   |
24 | if [] is named_var:  # F632 (fix)
25 |     pass
26 | if named_var is [1]:  # F632 (fix)
   |    ^^^^^^^^^^^^^^^^
27 |     pass
28 | if [1] is named_var:  # F632 (fix)
   |
help: Replace `is` with `==`
   |
26 - if named_var is [1]:  # F632 (fix)
26 + if named_var == [1]:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:28:4
   |
26 | if named_var is [1]:  # F632 (fix)
27 |     pass
28 | if [1] is named_var:  # F632 (fix)
   |    ^^^^^^^^^^^^^^^^
29 |     pass
30 | if named_var is [i for i in [1]]:  # F632 (fix)
   |
help: Replace `is` with `==`
   |
28 - if [1] is named_var:  # F632 (fix)
28 + if [1] == named_var:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:30:4
   |
28 | if [1] is named_var:  # F632 (fix)
29 |     pass
30 | if named_var is [i for i in [1]]:  # F632 (fix)
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
31 |     pass
   |
help: Replace `is` with `==`
   |
30 - if named_var is [i for i in [1]]:  # F632 (fix)
30 + if named_var == [i for i in [1]]:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:34:4
   |
33 | named_var = {}
34 | if {} is {}:  # F632 (fix)
   |    ^^^^^^^^
35 |     pass
36 | if named_var is {}:  # F632 (fix)
   |
help: Replace `is` with `==`
   |
34 - if {} is {}:  # F632 (fix)
34 + if {} == {}:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:36:4
   |
34 | if {} is {}:  # F632 (fix)
35 |     pass
36 | if named_var is {}:  # F632 (fix)
   |    ^^^^^^^^^^^^^^^
37 |     pass
38 | if {} is named_var:  # F632 (fix)
   |
help: Replace `is` with `==`
   |
36 - if named_var is {}:  # F632 (fix)
36 + if named_var == {}:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:38:4
   |
36 | if named_var is {}:  # F632 (fix)
37 |     pass
38 | if {} is named_var:  # F632 (fix)
   |    ^^^^^^^^^^^^^^^
39 |     pass
40 | if named_var is {1}:  # F632 (fix)
   |
help: Replace `is` with `==`
   |
38 - if {} is named_var:  # F632 (fix)
38 + if {} == named_var:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:40:4
   |
38 | if {} is named_var:  # F632 (fix)
39 |     pass
40 | if named_var is {1}:  # F632 (fix)
   |    ^^^^^^^^^^^^^^^^
41 |     pass
42 | if {1} is named_var:  # F632 (fix)
   |
help: Replace `is` with `==`
   |
40 - if named_var is {1}:  # F632 (fix)
40 + if named_var == {1}:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:42:4
   |
40 | if named_var is {1}:  # F632 (fix)
41 |     pass
42 | if {1} is named_var:  # F632 (fix)
   |    ^^^^^^^^^^^^^^^^
43 |     pass
44 | if named_var is {i for i in [1]}:  # F632 (fix)
   |
help: Replace `is` with `==`
   |
42 - if {1} is named_var:  # F632 (fix)
42 + if {1} == named_var:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:44:4
   |
42 | if {1} is named_var:  # F632 (fix)
43 |     pass
44 | if named_var is {i for i in [1]}:  # F632 (fix)
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
45 |     pass
   |
help: Replace `is` with `==`
   |
44 - if named_var is {i for i in [1]}:  # F632 (fix)
44 + if named_var == {i for i in [1]}:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:48:4
   |
47 | named_var = {1: 1}
48 | if {1: 1} is {1: 1}:  # F632 (fix)
   |    ^^^^^^^^^^^^^^^^
49 |     pass
50 | if named_var is {1: 1}:  # F632 (fix)
   |
help: Replace `is` with `==`
   |
48 - if {1: 1} is {1: 1}:  # F632 (fix)
48 + if {1: 1} == {1: 1}:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:50:4
   |
48 | if {1: 1} is {1: 1}:  # F632 (fix)
49 |     pass
50 | if named_var is {1: 1}:  # F632 (fix)
   |    ^^^^^^^^^^^^^^^^^^^
51 |     pass
52 | if {1: 1} is named_var:  # F632 (fix)
   |
help: Replace `is` with `==`
   |
50 - if named_var is {1: 1}:  # F632 (fix)
50 + if named_var == {1: 1}:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:52:4
   |
50 | if named_var is {1: 1}:  # F632 (fix)
51 |     pass
52 | if {1: 1} is named_var:  # F632 (fix)
   |    ^^^^^^^^^^^^^^^^^^^
53 |     pass
54 | if named_var is {1: 1}:  # F632 (fix)
   |
help: Replace `is` with `==`
   |
52 - if {1: 1} is named_var:  # F632 (fix)
52 + if {1: 1} == named_var:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:54:4
   |
52 | if {1: 1} is named_var:  # F632 (fix)
53 |     pass
54 | if named_var is {1: 1}:  # F632 (fix)
   |    ^^^^^^^^^^^^^^^^^^^
55 |     pass
56 | if {1: 1} is named_var:  # F632 (fix)
   |
help: Replace `is` with `==`
   |
54 - if named_var is {1: 1}:  # F632 (fix)
54 + if named_var == {1: 1}:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:56:4
   |
54 | if named_var is {1: 1}:  # F632 (fix)
55 |     pass
56 | if {1: 1} is named_var:  # F632 (fix)
   |    ^^^^^^^^^^^^^^^^^^^
57 |     pass
58 | if named_var is {i: 1 for i in [1]}:  # F632 (fix)
   |
help: Replace `is` with `==`
   |
56 - if {1: 1} is named_var:  # F632 (fix)
56 + if {1: 1} == named_var:  # F632 (fix)
   |

F632 [*] Use `==` to compare constant literals
  --> constant_literals.py:58:4
   |
56 | if {1: 1} is named_var:  # F632 (fix)
57 |     pass
58 | if named_var is {i: 1 for i in [1]}:  # F632 (fix)
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
59 |     pass
   |
help: Replace `is` with `==`
   |
58 - if named_var is {i: 1 for i in [1]}:  # F632 (fix)
58 + if named_var == {i: 1 for i in [1]}:  # F632 (fix)
   |
